Integrated address fetching and creation with checkout page

--- a/.env
+++ b/.env
@@ -1,3 +1,2 @@
-
-  # BASEURL= localhost:3001/api 
- BASEURL=https://ecommerce-backend-sivx.onrender.com/api
+VITE_BASEURL= http://localhost:3001/api 
+#  VITE_BASEURL=https://ecommerce-backend-sivx.onrender.com/api
