--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.12",
+    "vaul": "^1.1.2",
     "zod": "^4.1.5"
   },
   "devDependencies": {
