--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 VITE_BASEURL= http://localhost:3001/api 
 #  VITE_BASEURL=https://ecommerce-backend-sivx.onrender.com/api
+VITE_IMAGE_BASEURL=http://localhost:3001/uploads
